--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
         <title>jQuery DropDown</title>
         <meta name="description" content="Custom DropDown" />
-        <link rel="stylesheet" type="text/css" href="css/style.css" />
+        <link rel="stylesheet" type="text/css" href="css/dropdown.css" />
         <script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
     </head>
     <body style="background:#C2C2C2">
