--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-        <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>jQuery DropDown</title>
         <meta name="description" content="Custom DropDown" />
         <link rel="stylesheet" type="text/css" href="css/dropdown.css" />
-        <script type="text/javascript" src="js/modernizr.custom.79639.js"></script> 
+        <script type="text/javascript" src="js/modernizr.custom.79639.js"></script>
     </head>
     <body style="background:#C2C2C2">
         <div class="container">
@@ -22,6 +22,7 @@
                     <option value="">John Doe</option>
                     <option value="1">Profile</option>
                     <option value="2">Settings</option>
+                    <option value="1">Profile</option>
                     <option value="3" selected="selected">Log out</option>
                 </select>
                 <select class="input-select">
@@ -36,7 +37,7 @@
                       <option>Canada</option>
                       <option>Brésil</option>
                    </optgroup>
-                </select> 
+                </select>
             </section>
         </div>
         <!-- jQuery if needed -->
